# FSPy

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-publish.yml
fspy/: __init__.py  response_models.py  solver.py  solver_exceptions.py
