[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fspy"
version = "0.4.0"
authors = [{ name = "NandeMD" }]
description = "A FlareSolverr wrapper for Python."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["wrapper", "flaresolverr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "certifi>=2017.4.17",
    "charset-normalizer<4,>=2",
    "idna<4,>=2.5",
    "urllib3<3,>=1.21.1",
    "requests>=2.9.2",
    "orjson>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/NandeMD/FSPy"
Repository = "https://github.com/NandeMD/FSPy"

[tool.distutils.bdist_wheel]
universal = true
